# snake-rust

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
crate/src/: lib.rs  random.rs  snake.rs
web/: main.ts  style.css
