[package]
name = "snake-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"

[dependencies.web-sys]
web-sys = "0.3.58"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'KeyboardEvent',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'console',
]
